[gd_scene load_steps=20 format=3 uid="uid://di7wgqh7vibe7"]

[ext_resource type="Script" uid="uid://ukpnntfs15i0" path="res://src/scripts/gameplay/arcade_questions.gd" id="1_cdixn"]
[ext_resource type="Script" uid="uid://b28mwb5urarq3" path="res://src/scripts/gameplay/background.gd" id="2_1b062"]
[ext_resource type="FontFile" uid="uid://bmvtmpvoy1cwt" path="res://src/assets/fonts/editundo.ttf" id="3_8u6t1"]
[ext_resource type="FontFile" uid="uid://cli8gbn14umcl" path="res://src/assets/fonts/Abaddon Light.ttf" id="4_hjejh"]
[ext_resource type="FontFile" uid="uid://bhggoau4c0xk0" path="res://src/assets/fonts/Silver.ttf" id="5_1b062"]
[ext_resource type="Texture2D" uid="uid://cbtrgy4ve28cl" path="res://src/assets/sprites/Up-Arrows.png" id="5_8hd76"]
[ext_resource type="Texture2D" uid="uid://mmnw8vwr7dno" path="res://src/assets/sprites/Loading.png" id="6_8u6t1"]
[ext_resource type="Texture2D" uid="uid://x42n32rf4xqy" path="res://src/assets/sprites/Heart.png" id="6_76bfv"]
[ext_resource type="FontFile" uid="uid://c0w25r8vykatq" path="res://src/assets/fonts/Abaddon Bold.ttf" id="7_2p6vt"]
[ext_resource type="PackedScene" uid="uid://du6byd12byrk3" path="res://src/scenes/multiplayer/player-score.tscn" id="8_b67qj"]
[ext_resource type="Theme" uid="uid://ch3x2byuiyaxy" path="res://src/assets/themes/menu.tres" id="9_dct4x"]
[ext_resource type="Theme" uid="uid://drabaa7jfibga" path="res://src/assets/themes/small_button.tres" id="10_bbwy0"]
[ext_resource type="Texture2D" uid="uid://cejxfhqi5mryk" path="res://src/assets/sprites/People.png" id="11_ndjbd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8u6t1"]
atlas = ExtResource("6_8u6t1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjejh"]
atlas = ExtResource("6_8u6t1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hd76"]
atlas = ExtResource("6_8u6t1")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_76bfv"]
atlas = ExtResource("6_8u6t1")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p6vt"]
atlas = ExtResource("6_8u6t1")
region = Rect2(192, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dct4x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u6t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjejh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hd76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76bfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p6vt")
}],
"loop": true,
"name": &"Loading",
"speed": 5.0
}]

[node name="ArcadeQuestions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cdixn")

[node name="BackgroundControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBackground" type="ColorRect" parent="BackgroundControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65098)

[node name="ImageBackground" type="TextureRect" parent="BackgroundControl"]
modulate = Color(0.229112, 0.229112, 0.229112, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.65, 0.65)
pivot_offset = Vector2(960, 540)
stretch_mode = 5
script = ExtResource("2_1b062")

[node name="QuestionsContainer" type="Control" parent="."]
anchors_preset = 0
offset_left = 5.0
offset_top = -3.0
offset_right = 1151.0
offset_bottom = 652.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.066
anchor_right = 0.5
anchor_bottom = 0.066
offset_left = -126.0
offset_top = -30.768
offset_right = 100.0
offset_bottom = 38.232
theme_override_fonts/font = ExtResource("3_8u6t1")
theme_override_font_sizes/font_size = 50
text = "Score = 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 19.0
offset_right = 257.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("4_hjejh")
theme_override_font_sizes/font_size = 50
text = "0s"

[node name="MultiplayerUIControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MultiplayerWarningLabel" type="Label" parent="MultiplayerUIControl"]
layout_mode = 0
offset_left = 95.0
offset_top = 189.0
offset_right = 1033.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("5_1b062")
theme_override_font_sizes/font_size = 60
text = "A próxima questão será jogada junto a outro jogador!"

[node name="MatchmakingLabel" type="Label" parent="MultiplayerUIControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -25.5
offset_right = 184.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_1b062")
theme_override_font_sizes/font_size = 45
text = "Procurando outro jogador..."

[node name="MatchmakingTimer" type="Timer" parent="MultiplayerUIControl"]

[node name="LoadingSprite" type="AnimatedSprite2D" parent="MultiplayerUIControl"]
texture_filter = 3
position = Vector2(576, 454)
scale = Vector2(2.4375, 2.4375)
sprite_frames = SubResource("SpriteFrames_dct4x")
animation = &"Loading"
frame = 3
frame_progress = 0.145893

[node name="FinalLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -311.0
offset_top = -243.0
offset_right = 349.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8u6t1")
theme_override_font_sizes/font_size = 70
text = "Final message label"

[node name="PowerUpIconsControl" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.644
anchor_top = 0.028
anchor_right = 0.91
anchor_bottom = 0.134
offset_left = 0.111938
offset_top = -0.144001
offset_right = -0.320068
offset_bottom = 0.167999

[node name="HBoxContainer" type="HBoxContainer" parent="PowerUpIconsControl"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 140.0
scale = Vector2(0.4, 0.4)

[node name="PowerUpIcon1" type="TextureRect" parent="PowerUpIconsControl/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_8hd76")

[node name="PowerUpIcon2" type="TextureRect" parent="PowerUpIconsControl/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_76bfv")

[node name="QuestionCountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -61.0
offset_bottom = 55.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("7_2p6vt")
theme_override_font_sizes/font_size = 40
text = "0/0"

[node name="Player-score" parent="." instance=ExtResource("8_b67qj")]
visible = false
layout_mode = 1
offset_left = 2.0
offset_top = 92.0
offset_right = 2.0
offset_bottom = 92.0

[node name="PowerUpControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBackground" type="ColorRect" parent="PowerUpControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.717647)

[node name="HBoxContainer" type="HBoxContainer" parent="PowerUpControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_dct4x")
theme_override_constants/separation = 15
alignment = 1

[node name="PowerUpButton1" type="Button" parent="PowerUpControl/HBoxContainer"]
layout_mode = 2
text = "2X pontos"

[node name="PowerUpButton2" type="Button" parent="PowerUpControl/HBoxContainer"]
layout_mode = 2
text = "Invencibilidade"

[node name="WrongAnswer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackScreen" type="ColorRect" parent="WrongAnswer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="WrongPanel" type="Panel" parent="WrongAnswer"]
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -303.0
offset_top = 180.0
offset_right = 22.0
offset_bottom = 821.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
theme = ExtResource("9_dct4x")

[node name="VBoxContainer" type="VBoxContainer" parent="WrongAnswer/WrongPanel"]
texture_filter = 3
layout_mode = 0
offset_left = 268.0
offset_top = 59.001
offset_right = 794.0
offset_bottom = 269.001
rotation = 1.5708

[node name="TitleLabel" type="Label" parent="WrongAnswer/WrongPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 0.341176)
theme_override_font_sizes/font_size = 50
text = "Wrong Answer!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="WrongAnswer/WrongPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.517647)
theme_override_font_sizes/font_size = 30
text = "Try again"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="WrongPanelButton" type="Button" parent="WrongAnswer/WrongPanel"]
layout_mode = 0
offset_left = 90.9981
offset_top = 518.0
offset_right = 138.998
offset_bottom = 563.0
rotation = 1.5708
theme_override_font_sizes/font_size = 35
text = "Ok!"

[node name="ShowPlayersButton" type="Button" parent="."]
texture_filter = 3
layout_mode = 0
offset_left = 20.0
offset_top = 24.0
offset_right = 145.0
offset_bottom = 140.563
scale = Vector2(0.269031, 0.269031)
theme = ExtResource("10_bbwy0")
icon = ExtResource("11_ndjbd")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="pressed" from="PowerUpControl/HBoxContainer/PowerUpButton1" to="." method="_on_powerup_double"]
[connection signal="pressed" from="PowerUpControl/HBoxContainer/PowerUpButton2" to="." method="_on_powerup_life"]
[connection signal="pressed" from="WrongAnswer/WrongPanel/WrongPanelButton" to="." method="_on_wrong_panel_button_pressed"]
[connection signal="pressed" from="ShowPlayersButton" to="." method="_on_show_players_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
